--- a/aed_final_project/nbproject/project.properties
+++ b/aed_final_project/nbproject/project.properties
@@ -36,10 +36,12 @@ excludes=
 file.reference.flatlaf-1.3.jar=..\\..\\..\\..\\Desktop\\AED\\flatlaf-1.3.jar
 
 file.reference.flatlaf-1.3.jar-1=..\\..\\..\\..\\Desktop\\flatlaf-1.3.jar
+file.reference.flatlaf-1.3.jar-2=C:\\Users\\shubh\\Downloads\\flatlaf-1.3.jar
 file.reference.flatlaf-demo-2.6.jar=..\\..\\..\\..\\Desktop\\flatlaf-demo-2.6.jar
 file.reference.flatlaf-intellij-themes-1.3.jar=..\\..\\..\\..\\Desktop\\AED\\flatlaf-intellij-themes-1.3.jar
 file.reference.flatlaf-intellij-themes-1.3.jar-1=..\\..\\..\\..\\Desktop\\flatlaf-intellij-themes-1.3.jar
 
+file.reference.flatlaf-intellij-themes-1.3.jar-2=C:\\Users\\shubh\\Downloads\\flatlaf-intellij-themes-1.3.jar
 file.reference.mysql-connector-java-8.0.13.jar=C:\\Users\\shubh\\Downloads\\mysql-connector-java-8.0.13.jar
 file.reference.mysql-connector-java-8.0.13.jar-1=..\\..\\..\\..\\Desktop\\mysql-connector-java-8.0.13.jar
 includes=**
@@ -51,7 +53,9 @@ javac.classpath=\
     ${file.reference.flatlaf-intellij-themes-1.3.jar}:\
     ${file.reference.flatlaf-1.3.jar-1}:\
     ${file.reference.flatlaf-demo-2.6.jar}:\
-    ${file.reference.flatlaf-intellij-themes-1.3.jar-1}
+    ${file.reference.flatlaf-intellij-themes-1.3.jar-1}:\
+    ${file.reference.flatlaf-1.3.jar-2}:\
+    ${file.reference.flatlaf-intellij-themes-1.3.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
