--- a/aed_final_project/nbproject/project.properties
+++ b/aed_final_project/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/aed_final_project
 excludes=
 file.reference.mysql-connector-java-8.0.13.jar=C:\\Users\\shubh\\Downloads\\mysql-connector-java-8.0.13.jar
+file.reference.mysql-connector-java-8.0.13.jar-1=..\\..\\..\\..\\Desktop\\mysql-connector-java-8.0.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.13.jar}
+    ${file.reference.mysql-connector-java-8.0.13.jar}:\
+    ${file.reference.mysql-connector-java-8.0.13.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
