Improvements in overall UI, improvement in Connectivity
Improvements in overall UI, improvement in Connectivity

--- a/aed_final_project/nbproject/project.properties
+++ b/aed_final_project/nbproject/project.properties
@@ -33,6 +33,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/aed_final_project
 excludes=
+file.reference.AbsoluteLayout.jar=..\\..\\..\\..\\Desktop\\AED Projects\\AbsoluteLayout.jar
+file.reference.activation.jar=..\\..\\..\\..\\Desktop\\AED\\activation.jar
 file.reference.flatlaf-1.3.jar=..\\..\\..\\..\\Desktop\\AED\\flatlaf-1.3.jar
 
 file.reference.flatlaf-1.3.jar-1=..\\..\\..\\..\\Desktop\\flatlaf-1.3.jar
@@ -42,6 +44,8 @@ file.reference.flatlaf-intellij-themes-1.3.jar=..\\..\\..\\..\\Desktop\\AED\\fla
 file.reference.flatlaf-intellij-themes-1.3.jar-1=..\\..\\..\\..\\Desktop\\flatlaf-intellij-themes-1.3.jar
 
 file.reference.flatlaf-intellij-themes-1.3.jar-2=C:\\Users\\shubh\\Downloads\\flatlaf-intellij-themes-1.3.jar
+file.reference.jar_files.zip=..\\..\\..\\..\\Desktop\\AED Projects\\jar_files.zip
+file.reference.mail.jar=..\\..\\..\\..\\Desktop\\AED\\mail.jar
 file.reference.mysql-connector-java-8.0.13.jar=C:\\Users\\shubh\\Downloads\\mysql-connector-java-8.0.13.jar
 file.reference.mysql-connector-java-8.0.13.jar-1=..\\..\\..\\..\\Desktop\\mysql-connector-java-8.0.13.jar
 includes=**
@@ -55,7 +59,12 @@ javac.classpath=\
     ${file.reference.flatlaf-demo-2.6.jar}:\
     ${file.reference.flatlaf-intellij-themes-1.3.jar-1}:\
     ${file.reference.flatlaf-1.3.jar-2}:\
-    ${file.reference.flatlaf-intellij-themes-1.3.jar-2}
+    ${file.reference.flatlaf-intellij-themes-1.3.jar-2}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jar_files.zip}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -91,7 +100,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=aed_final_project
-main.class=Manufacture.AdminLogin
+main.class=ui.onboarding.MainOnboarding
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
